--- a/galaxyApp/index.html
+++ b/galaxyApp/index.html
@@ -14,8 +14,8 @@
 	<body>
 
 		<h1>Which date?</h1>
-		<input type="text" name="" value="">
-		<button type="button" name="button">Get Picture</button>
+		<input id="date" type="text" name="" value="" placeholder="DD/MM/YYYY">
+		<button type="button" name="button" id="btn">Get Picture</button>
 
 		<h2>Name</h2>
 		<img src="" alt="">
