--- a/researcher/index.html
+++ b/researcher/index.html
@@ -5,18 +5,22 @@
     	<meta name="description" content="This is where your description goes">
     	<meta name="keywords" content="one, two, three">
 
-		<title>Title in the tab</title>
+		<title>Random project generator</title>
 
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-		<img src="img/the-circle.jpg" alt="Netflix's The Circle">
 
-		<button>okay</button>
-		<h2></h2>
+		<h1>Generates a random api to use for your project!</h1>
+	
+		<button type="button" name="button">Get an API</button>
 
+		<section id="apiArea">
+			
+		</section>
+		
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
 </html>
