--- a/class27-materials/api-template/index.html
+++ b/class27-materials/api-template/index.html
@@ -14,12 +14,15 @@
 	<body>
 
 		<h1>Which Pokemon?</h1>
-		<input type="text" name="" value="">
+		<input type="date" name="" value="">
 		<button type="button" name="button">Get Pokemon</button>
 
 		<h2>Name?</h2>
+
+		<iframe src="" frameborder="0"></iframe>
 		<img src="img/pokemon.jpeg" alt="">
 		<h3>Type?</h3>
+		
 
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
