GIF Random favorite tool utilized, and functional

--- a/fruit-discovery/index.html
+++ b/fruit-discovery/index.html
@@ -12,16 +12,21 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
+		<section>
+		<h1>Find and Favorite a random GIFY!</h1>
 
-		<h1>Random Gif?</h1>
+		<button id="gifB" type="button" name="button">Get a gif</button>
 
-		<button type="button" name="button">Get a gif</button>
-
-		<h2>Name?</h2>
-		<img src="img/pokemon.jpeg" width="400px"alt="">
+		<img src="" width="400px"alt="">
 		<div id="box"></div>
-		
+	</section>
+		<footer>
+			<h4>My favorites</h4>
+			<ul id="favBox"></ul>
 
+
+		</footer>
+		<p>Made using Gify's api!</p>
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
 </html>
